Fix horizontal alignment for tiny screens

--- a/src/screen.scss
+++ b/src/screen.scss
@@ -42,7 +42,7 @@ $color5: #188fa7;
   background: $white;
   font-family: 'Lato',sans-serif;
   font-size: 14px;
-  padding: 70px 0;
+  padding: 70px 10px;
 
   h3 {
     font-family: 'Montserrat',sans-serif;
